--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Offene Hypnosegruppe in Hamburg</h3>
 
-<p>Die HypnoseHelden sind eine offene Hypnosegruppe in Hamburg. Abseits von Seminaren oder Internetforen möchten wir Menschen mit Interesse an Hypnose zusammenführen.</p>
+<p>Die HypnoseHelden sind eine offene Hypnosegruppe in Hamburg. Abseits von Seminaren oder dem Internet möchten wir Menschen mit Interesse an Hypnose zusammenführen.</p>
 
 <p>Das Üben steht im Vordergrund. Idealerweise wurden erste Erfahrungen bereits gemacht und etwas Hintergrundwissen ist vorhanden. Ob diese Erfahrungen in einem Seminar oder zu Hause gesammelt wurden, ist nebensächlich.</p>
 
@@ -60,7 +60,7 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kontakt</h3>
 
-<p>Wir freuen uns über neue Gesichter!</p><p>Bitte schreibe eine Email an:&nbsp;&nbsp;&nbsp;<i>info AT hypnosehelden.de</i></p>
+<p>Wir freuen uns auf Dich!</p><p>Bitte schreibe eine Email an:&nbsp;&nbsp;&nbsp;<i>info AT hypnosehelden.de</i></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href=""></a><a href=""></a></span>
