--- a/index.html
+++ b/index.html
@@ -62,11 +62,14 @@
 
 <p>Wir freuen uns auf Dich!</p><p>Bitte schreibe eine Email an:&nbsp;&nbsp;&nbsp;<i>info AT hypnosehelden.de</i></p>
 
-      <footer class="site-footer">
-        <span class="site-footer-owner"><a href=""></a><a href=""></a></span>
-
+    <footer class="site-footer" style="font-size:75%;">
+        <p><strong>Datenschutz</strong></p>
+        <p>Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.</p>
+        <p>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben.</p>
+        <p>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.</p><br />
         <span class="site-footer-credits">HypnoseHelden ist eine private, nicht-kommerzielle Website.</span>
-      </footer>
+    </footer>
+
 
     </section>
 
