Changed: brand appearance

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Hypnose-Helden | Offene Hypnosegruppe in Hamburg</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,74 +9,80 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <meta name="description"
-      content="Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg">
+    <meta name="description" content="Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg">
     <meta name="keywords" content="hypnose,mesmerismus,trance,hamburg,treffen,gruppe">
-  </head>
-  <body>
+</head>
+
+<body>
     <section class="page-header">
-      <h1 class="project-name">HypnoseHelden</h1>
-      <h2 class="project-tagline">Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg</h2>
-      <!-- a href="hamburg/index.html" class="btn">Hamburg</a -->
+        <h1 class="project-name">HypnoseHelden</h1>
+        <h2 class="project-tagline">Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg</h2>
+        <!-- a href="hamburg/index.html" class="btn">Hamburg</a -->
     </section>
 
     <section class="main-content">
-      <h3>
+        <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Willkommen!</h3>
 
-<p>
-    <ul>
-        <li>Du hast ein Hypnose-Seminar besucht?</li>
-        <li>Du hast erste Erfahrungen mit Hypnose?</li>
-        <li>Du suchst Übungspartner?</li>
-        <li>Du findest regelmäßig Zeit?</li>
-        <li>Du möchtest Dich über Bücher &amp; Seminare austauschen?</li>
-    </ul>
-</p>
+        <p>
+            <ul>
+                <li>Du hast ein Hypnose-Seminar besucht?</li>
+                <li>Du hast erste Erfahrungen mit Hypnose?</li>
+                <li>Du suchst Übungspartner?</li>
+                <li>Du findest regelmäßig Zeit?</li>
+                <li>Du möchtest Dich über Bücher &amp; Seminare austauschen?</li>
+            </ul>
+        </p>
 
-<h3>
+        <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Offene Hypnosegruppe in Hamburg</h3>
 
-<p>Die HypnoseHelden sind eine offene Hypnosegruppe in Hamburg. Abseits von Seminaren oder dem Internet möchten wir Menschen mit Interesse an Hypnose zusammenführen.</p>
+        <p>Die HypnoseHelden sind eine offene Hypnosegruppe in Hamburg. Abseits von Seminaren oder dem Internet möchten wir Menschen mit Interesse an Hypnose zusammenführen.</p>
 
-<p>Das Üben steht im Vordergrund. Idealerweise wurden erste Erfahrungen bereits gemacht und etwas Hintergrundwissen ist vorhanden. Ob diese Erfahrungen in einem Seminar oder zu Hause gesammelt wurden, ist nebensächlich.</p>
+        <p>Das Üben steht im Vordergrund. Idealerweise wurden erste Erfahrungen bereits gemacht und etwas Hintergrundwissen ist vorhanden. Ob diese Erfahrungen in einem Seminar oder zu Hause gesammelt wurden, ist nebensächlich.</p>
 
-<p>HypnoseHelden ist für Laien gedacht und bieten keine Therapien an. Bestenfalls werden Selbstheilungskräften aktiviert, was eine Eigenart der Hypnose ist. Gesundheitliche Beschwerden müssen von Ärzten oder Heilpraktikern in einem professionellem Rahmen behandelt werden.</p>
+        <p>HypnoseHelden ist für Laien gedacht und bieten keine Therapien an. Bestenfalls werden Selbstheilungskräften aktiviert, was eine Eigenart der Hypnose ist. Gesundheitliche Beschwerden müssen von Ärzten oder Heilpraktikern in einem professionellem
+            Rahmen behandelt werden.</p>
 
-<h3>
+        <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a></h3>
 
-<p></p>
+        <p></p>
 
-<h3>
+        <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ort und Zeit</h3>
 
-<p>Wir treffen uns: <ul>
-     <li>jedem zweiten Samstag im Monat,</li>
-     <li>zwischen 17:00 - 20:00 Uhr,</li>
-     <li>an einem sehr geheimen Ort.</li>
- </ul>
-</p>
+        <p>Wir treffen uns:
+            <ul>
+                <li>jedem zweiten Samstag im Monat,</li>
+                <li>zwischen 17:00 - 20:00 Uhr,</li>
+                <li>an einem sehr geheimen Ort.</li>
+            </ul>
+        </p>
 
-<h3>
+        <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kontakt</h3>
 
-<p>Wir freuen uns auf Dich!</p><p>Bitte schreibe eine Email an:&nbsp;&nbsp;&nbsp;<i>info AT hypnosehelden.de</i></p>
+        <p>Wir freuen uns auf Dich!</p>
+        <p>Bitte schreibe eine Email an:&nbsp;&nbsp;&nbsp;<i>info AT hypnosehelden.de</i></p>
 
-    <footer class="site-footer" style="font-size:75%;">
-        <p><strong>Datenschutz</strong></p>
-        <p>Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.</p>
-        <p>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben.</p>
-        <p>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.</p><br />
-        <span class="site-footer-credits">HypnoseHelden ist eine private, nicht-kommerzielle Website.</span>
-    </footer>
+        <footer class="site-footer" style="font-size:75%;">
+            <p><strong>Datenschutz</strong></p>
+            <p>Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.</p>
+            <p>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adressen) erhoben werden, erfolgt dies, soweit möglich,
+                stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben.</p>
+            <p>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.</p>
+            <br />
+            <span class="site-footer-credits">HypnoseHelden ist eine private, nicht-kommerzielle Website.</span>
+        </footer>
 
 
     </section>
 
     <script>
-        document.body.innerHTML = document.body.innerHTML.replace(/HypnoseHelden/g, 'Hypnose<i style="color:#00bbbb;">Helden</i>');
+        document.body.innerHTML = document.body.innerHTML.replace(/HypnoseHelden/g, '<b>Hypnose<i style="color:#00bbbb;">Helden</i></b>');
     </script>
 
-  </body>
+</body>
+
 </html>
