--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p></p>
 
         <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ort und Zeit</h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Treffen und Kontakt</h3>
 
         <p>Wir treffen uns:
             <ul>
@@ -60,11 +60,10 @@
             </ul>
         </p>
 
-        <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kontakt</h3>
+        <!-- h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kontakt</h3 -->
 
-        <p>Wir freuen uns auf Dich!</p>
-        <p>Bitte schreibe eine Email an:&nbsp;&nbsp;&nbsp;<i>info AT hypnosehelden.de</i></p>
+        <p>Wir freuen uns auf Dich! Bitte schreibe eine Email an:&nbsp;&nbsp;&nbsp;<i>info AT hypnosehelden.de</i></p>
 
         <footer class="site-footer" style="font-size:75%;">
             <p><strong>Datenschutz</strong></p>
