--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <ul>
                 <li>Du hast ein Hypnose-Seminar besucht?</li>
                 <li>Du hast erste Erfahrungen mit Hypnose?</li>
+                <li>Du verfügst über etwas Hintergrundwissen?</li>
                 <li>Du suchst Übungspartner?</li>
                 <li>Du findest regelmäßig Zeit?</li>
                 <li>Du möchtest Dich über Bücher &amp; Seminare austauschen?</li>
@@ -41,8 +42,9 @@
 
         <p>Das Üben steht im Vordergrund. Idealerweise wurden erste Erfahrungen bereits gemacht und etwas Hintergrundwissen ist vorhanden. Ob diese Erfahrungen in einem Seminar oder zu Hause gesammelt wurden, ist nebensächlich.</p>
 
-        <p>HypnoseHelden ist für Laien gedacht und bieten keine Therapien an. Bestenfalls werden Selbstheilungskräften aktiviert, was eine Eigenart der Hypnose ist. Gesundheitliche Beschwerden müssen von Ärzten oder Heilpraktikern in einem professionellem
-            Rahmen behandelt werden.</p>
+        <p>Gerne empfehlen wir sinnvolle </p>
+
+        <p>HypnoseHelden ist für Laien gedacht und bieten keine Therapien an. Bestenfalls werden Selbstheilungskräften aktiviert, was eine Eigenart der Hypnose ist. Gesundheitliche Beschwerden müssen von Ärzten oder Heilpraktikern in einem professionellem Rahmen behandelt werden.</p>
 
         <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a></h3>
