--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul>
                 <li>Du hast ein Hypnose-Seminar besucht?</li>
                 <li>Du hast erste Erfahrungen mit Hypnose?</li>
-                <li>Du verfügst über etwas Hintergrundwissen?</li>
+                <li>Du verfügst über Hintergrundwissen?</li>
                 <li>Du suchst Übungspartner?</li>
                 <li>Du findest regelmäßig Zeit?</li>
                 <li>Du möchtest Dich über Bücher &amp; Seminare austauschen?</li>
