--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Offene Hypnosegruppe in Hamburg</h3>
 
-        <p>Die HypnoseHelden sind eine offene Hypnosegruppe in Hamburg. Abseits von Seminaren oder dem Internet möchten wir Menschen mit Interesse an Hypnose zusammenführen.</p>
+        <p>HypnoseHelden ist eine offene Hypnosegruppe in Hamburg. Abseits von Seminaren oder dem Internet möchten wir Menschen mit Interesse an Hypnose zusammenführen.</p>
 
         <p>Das Üben steht im Vordergrund. Idealerweise wurden erste Erfahrungen bereits gemacht und etwas Hintergrundwissen ist vorhanden. Ob diese Erfahrungen in einem Seminar oder zu Hause gesammelt wurden, ist nebensächlich.</p>
 
