--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <meta name="description" content="Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg">
     <meta name="keywords" content="hypnose,mesmerismus,trance,hamburg,treffen,gruppe">
+    <link rel="alternate" hreflang="de" href="http://hypnosehelden.de/" />
 </head>
 
 <body>
