Added: new group

--- a/index.html
+++ b/index.html
@@ -50,15 +50,20 @@
         <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Treffen und Kontakt</h3>
 
+        <p  style="border:1px  red solid;padding:5px;color:red">WICHTIG:</span> Die Treffen werden beginnen, sobald sich 4-6 Interessenten gefunden haben.
+            Schreibe uns eine Email. Wir informieren Dich, wenn es los geht.
+        </p>
+
         <p>Wir treffen uns:
             <ul>
-                <li>jedem zweiten Samstag im Monat,</li>
-                <li>zwischen 17:00 - 20:00 Uhr,</li>
+                <li>jedem [?] Samstag im Monat,</li>
+                <li>zwischen [?] - [?] Uhr,</li>
                 <li>an einem sehr geheimen Ort.</li>
             </ul>
         </p>
 
-        <p>Wir freuen uns auf Dich! Bitte schreibe eine Email an:&nbsp;&nbsp;&nbsp;<i>info AT hypnosehelden.de</i></p>
+        <p>Wir freuen uns auf Dich! Bitte schreibe eine Email an <a style="text-decoration:underline;" href="mailto:info@hypnosehelden.de">info@hypnosehelden.de</a> .</p>
+
 
         <footer class="site-footer" style="font-size:75%;">
             <p><strong>Datenschutz</strong></p>
