--- a/index.html
+++ b/index.html
@@ -15,7 +15,21 @@
 </head>
 
 <body>
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v2.6";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+
+<div class="fb-like" data-href="http://hypnosehelden.de/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+
     <section class="page-header">
+        <div style="text-align:right;" class="fb-page" data-href="https://www.facebook.com/groups/259833597717747" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"></div>
+
         <h1 class="project-name">HypnoseHelden</h1>
         <h2 class="project-tagline">Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg</h2>
     </section>
