--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     }(document, 'script', 'facebook-jssdk'));</script>
 
 <div class="fb-like" data-href="http://hypnosehelden.de/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
-
     <section class="page-header">
-        <div style="text-align:right;" class="fb-page" data-href="https://www.facebook.com/groups/259833597717747" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"></div>
+
+<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-action="like" data-show-faces="false" data-share="true"></div>
 
         <h1 class="project-name">HypnoseHelden</h1>
         <h2 class="project-tagline">Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg</h2>
