--- a/index.html
+++ b/index.html
@@ -12,29 +12,31 @@
     <meta name="description" content="Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg">
     <meta name="keywords" content="hypnose,mesmerismus,trance,hamburg,treffen,gruppe">
     <link rel="alternate" hreflang="de" href="http://hypnosehelden.de/" />
+    <style>
+    .facebook_container {
+        text-align:right;position: absolute;top: 0;right: 0;padding-top:64px;padding-right:16px;padding-left:16px;
+    }
+    .facebook_container:hover  {
+        border-bottom:2px rgb(58,88,157) solid;
+    }
+    </style>
 </head>
 
 <body>
 
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v2.6";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-
-<div class="fb-like" data-href="http://hypnosehelden.de/" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
     <section class="page-header">
-
-<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-action="like" data-show-faces="false" data-share="true"></div>
 
         <h1 class="project-name">HypnoseHelden</h1>
         <h2 class="project-tagline">Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg</h2>
     </section>
 
-    <section class="main-content">
+    <section class="main-content" style="position:relative;">
+
+
+        <div class="facebook_container">
+        <a class="facebook" href="https://www.facebook.com/groups/259833597717747/" target="_blank" title="Facebook"><img src="assets/FB-FindUsonFacebook-online-144.png" alt="Facebook"/></a>
+        </div>
+
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Willkommen!</h3>
 
