Added: link hover

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             padding-right: 16px;
             padding-left: 16px;
         }
+        .facebook_container:hover {
+            border-bottom: 2px rgb(58,88,157) solid;
+        }
     </style>
     <script type="application/ld+json">
     {
