--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             padding-right: 16px;
             padding-left: 16px;
         }
-        .facebook_container:hover {
+        .facebook_container a:hover {
             border-bottom: 2px rgb(58,88,157) solid;
         }
     </style>
