--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     }, {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "name": "Hypnose-Helden Hamburg | Offene Hypnosegruppe",
+        "name": "Hypnose &middot; Helden &middot; Hamburg | Offene Hypnosegruppe",
         "alternateName": "HypnoseHelden",
         "url": "http://hypnosehelden.de/"
     }, {
@@ -74,7 +74,8 @@
     <section class="page-header">
 
         <h1 class="project-name">HypnoseHelden</h1>
-        <h2 class="project-tagline">Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg</h2>
+        <!-- h2 class="project-tagline">Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg</h2 -->
+        <h2 class="project-tagline">Hypnosegruppe Hamburg / regelmäßig / offen / nicht kommerziell</h2>
     </section>
 
     <section class="main-content" style="position:relative;">
