--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <h1 class="project-name">HypnoseHelden</h1>
         <!-- h2 class="project-tagline">Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg</h2 -->
-        <h2 class="project-tagline">Hypnosegruppe Hamburg / regelmäßig / offen / nicht kommerziell</h2>
+        <h2 class="project-tagline">Hypnosegruppe Hamburg &bull; regelmäßig &bull; offen &bull; nicht kommerziell</h2>
     </section>
 
     <section class="main-content" style="position:relative;">
