--- a/index.html
+++ b/index.html
@@ -122,12 +122,11 @@
             <ul>
                 <li>jedem [?] Samstag im Monat,</li>
                 <li>zwischen [?] - [?] Uhr,</li>
-                <li>an einem sehr geheimen Ort.</li>
+                <li>an einem noch geheimen Ort in Hamburg.</li>
             </ul>
         </p>
 
-        <p>Wir freuen uns auf Dich! Bitte schreibe eine Email an <a style="text-decoration:underline;" href="mailto:info@hypnosehelden.de">info@hypnosehelden.de</a> .</p>
-
+        <p>Wir freuen uns auf Dich! Bitte schreibe eine Email an <a style="text-decoration:underline;" href="mailto:info@hypnosehelden.de">info@hypnosehelden.de</a>.</p>
 
         <footer class="site-footer" style="font-size:75%;">
             <p><strong>Datenschutz</strong></p>
@@ -135,8 +134,12 @@
             <p>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adressen) erhoben werden, erfolgt dies, soweit möglich,
                 stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben.</p>
             <p>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.</p>
-            <br />
-            <span class="site-footer-credits">HypnoseHelden ist eine private, nicht-kommerzielle Website.</span>
+
+            <p><strong>Datenschutzerklärung für die Nutzung von Google Analytics</strong></p>
+            <p>Diese Website nutzt Funktionen des  Webanalysedienstes Google Analytics. Anbieter ist die Google Inc. 1600 Amphitheatre Parkway Mountain View, CA 94043, USA. Google Analytics verwendet sog. "Cookies". Das sind Textdateien, die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglichen. Die durch den Cookie erzeugten Informationen über Ihre Benutzung dieser Website werden in der Regel an einen Server von Google in den USA übertragen und dort gespeichert.</p>
+            <p>Im Falle der Aktivierung der IP-Anonymisierung auf dieser Webseite wird Ihre IP-Adresse von Google jedoch innerhalb von Mitgliedstaaten der Europäischen Union oder in anderen Vertragsstaaten des Abkommens über den Europäischen Wirtschaftsraum zuvor gekürzt. Nur in Ausnahmefällen wird die volle IP-Adresse an einen Server von Google in den USA übertragen und dort gekürzt. Im Auftrag des Betreibers dieser Website wird Google diese Informationen benutzen, um Ihre Nutzung der Website auszuwerten, um Reports über die Websiteaktivitäten zusammenzustellen und um weitere mit der Websitenutzung und der Internetnutzung verbundene Dienstleistungen gegenüber dem Websitebetreiber zu erbringen. Die im Rahmen von Google Analytics von Ihrem Browser übermittelte IP-Adresse wird nicht mit anderen Daten von Google zusammengeführt.</p>
+            <p>Sie können die Speicherung der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website vollumfänglich werden nutzen können. Sie können darüber hinaus die Erfassung der durch das Cookie erzeugten und auf Ihre Nutzung der Website bezogenen Daten (inkl. Ihrer IP-Adresse) an Google sowie die Verarbeitung dieser Daten durch Google verhindern, indem sie das unter dem folgenden Link verfügbare Browser-Plugin herunterladen und installieren: http://tools.google.com/dlpage/gaoptout?hl=de</p>
+            <p><span class="site-footer-credits">HypnoseHelden ist eine private, nicht-kommerzielle Website.</span></p>
         </footer>
 
 
@@ -145,6 +148,14 @@
     <script>
         document.body.innerHTML = document.body.innerHTML.replace(/HypnoseHelden/g, '<b>Hypnose<i style="color:#00bbbb;">Helden</i></b>');
     </script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-2442441-6', 'auto');
+  ga('send', 'pageview');
+  </script>
 
 </body>
 
