--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <p>Das Üben steht im Vordergrund. Idealerweise wurden erste Erfahrungen bereits gemacht und etwas Hintergrundwissen ist vorhanden. Ob diese Erfahrungen in einem Seminar oder zu Hause gesammelt wurden, ist nebensächlich.</p>
 
-        <p>HypnoseHelden ist für Laien gedacht und bieten keine Therapien an. Bestenfalls werden Selbstheilungskräften aktiviert, was eine Eigenart der Hypnose ist. Gesundheitliche Beschwerden müssen von Ärzten oder Heilpraktikern in einem professionellem
+        <p>HypnoseHelden ist für Laien gedacht und bieten keine Therapien an. Bestenfalls werden Selbstheilungskräfte aktiviert, was eine Eigenart der Hypnose ist. Gesundheitliche Beschwerden müssen von Ärzten oder Heilpraktikern in einem professionellem
             Rahmen behandelt werden.</p>
 
         <h3>
