--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <h1 class="project-name">HypnoseHelden</h1>
         <!-- h2 class="project-tagline">Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg</h2 -->
-        <h2 class="project-tagline">Hypnosegruppe Hamburg &bull; regelmäßig &bull; offen &bull; nicht kommerziell</h2>
+        <h2 class="project-tagline">Hypnosegruppe Hamburg &bull; regelmäßig &bull; offen &bull; unkommerziell</h2>
     </section>
 
     <section class="main-content" style="position:relative;">
@@ -104,10 +104,9 @@
 
         <p>HypnoseHelden ist eine offene Hypnosegruppe in Hamburg. Abseits von Seminaren oder dem Internet möchten wir Menschen mit Interesse an Hypnose zusammenführen.</p>
 
-        <p>Das Üben steht im Vordergrund. Idealerweise wurden erste Erfahrungen bereits gemacht und etwas Hintergrundwissen ist vorhanden. Ob diese Erfahrungen in einem Seminar oder zu Hause gesammelt wurden, ist nebensächlich.</p>
+        <p>Idealerweise wurden erste Erfahrungen bereits gemacht und Hintergrundwissen ist vorhanden. Ob diese Erfahrungen in einem Seminar oder privat gesammelt wurden, ist nebensächlich.</p>
 
-        <p>HypnoseHelden ist für Laien gedacht und bieten keine Therapien an. Bestenfalls werden Selbstheilungskräfte aktiviert, was eine Eigenart der Hypnose ist. Gesundheitliche Beschwerden müssen von Ärzten oder Heilpraktikern in einem professionellem
-            Rahmen behandelt werden.</p>
+        <p>HypnoseHelden ist für Laien gedacht und bieten keine Therapie an. Die Gruppe dient dem Austausch und dem Üben von Induktionsformen.</p>
 
         <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a></h3>
@@ -115,14 +114,14 @@
         <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Treffen und Kontakt</h3>
 
-        <p style="border:1px  red solid;padding:5px;color:red">WICHTIG:</span> Die Treffen werden beginnen, sobald sich 4-6 Interessenten gefunden haben. Schreibe uns eine Email. Wir informieren Dich, wenn es los geht.
+        <p style="border:1px  red solid;padding:5px;color:red">WICHTIG:</span> Die Treffen werden beginnen, wenn sich mindestens 2 weitere Interessenten gefunden haben. Schreibe uns eine Email. Wir informieren Dich, wenn es los geht.
         </p>
 
         <p>Wir treffen uns:
             <ul>
                 <li>jedem [?] Samstag im Monat,</li>
                 <li>zwischen [?] - [?] Uhr,</li>
-                <li>an einem noch geheimen Ort in Hamburg.</li>
+                <li>an einem von der Teilnehmerzahl abhängigen Ort.</li>
             </ul>
         </p>
 
