--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
 
         <p>Wir freuen uns auf Dich! Bitte schreibe eine Email an <a style="text-decoration:underline;" href="mailto:info@hypnosehelden.de">info@hypnosehelden.de</a>.</p>
 
+        <!--googleoff: all-->
         <footer class="site-footer" style="font-size:75%;">
             <p><strong>Datenschutz</strong></p>
             <p>Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.</p>
@@ -140,6 +141,7 @@
             <p>Sie können die Speicherung der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website vollumfänglich werden nutzen können. Sie können darüber hinaus die Erfassung der durch das Cookie erzeugten und auf Ihre Nutzung der Website bezogenen Daten (inkl. Ihrer IP-Adresse) an Google sowie die Verarbeitung dieser Daten durch Google verhindern, indem sie das unter dem folgenden Link verfügbare Browser-Plugin herunterladen und installieren: http://tools.google.com/dlpage/gaoptout?hl=de</p>
             <p><span class="site-footer-credits">HypnoseHelden ist eine private, nicht-kommerzielle Website.</span></p>
         </footer>
+        <!--googleon: all-->
 
 
     </section>
