--- a/index.html
+++ b/index.html
@@ -106,7 +106,13 @@
         <p>HypnoseHelden ist für Laien gedacht und bieten keine Therapie an. Die Gruppe dient dem Austausch und dem Üben von Induktionsformen.</p>
 
         <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a></h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mitschrift eines Seminars</h3>
+
+Folgende Mitschrift zu Hypnose und Mesmerismus entstand auf einem Seminar und versucht Grundlagen zusammenzutragen. Die Mitschrift dient rein
+informativen Zwecken. Für medizinische Laien ist in Deutschland der <i>Heilpraktiker</i> Voraussetzung
+um therapeutisch arbeiten zu dürfen.
+<p />
+<a href="Hypnose.und.Mesmerismus.10.2016.pdf" target="_blank">PDF: Hypnose und Mesmerismus</a>
 
         <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Treffen und Kontakt</h3>
@@ -134,7 +140,7 @@
     <script>
         document.body.innerHTML = document.body.innerHTML.replace(/HypnoseHelden/g, '<b>Hypnose<i style="color:#00bbbb;">Helden</i></b>');
     </script>
-    
+
 
 </body>
 
