--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@ um therapeutisch arbeiten zu dürfen.
 <p />
 <a href="Hypnose.und.Mesmerismus.10.2016.pdf" target="_blank">PDF: Hypnose und Mesmerismus</a>
 
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Milton Erickson Workshop 2017: Grundlagen</h3>
+Hier geht es zu den Infos: <a href="workshop-milton-erickson-2017.html" >Milton Erickson Workshop 2017: Grundlagen</a>
+
+
         <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Treffen und Kontakt</h3>
 
