--- a/workshop-milton-erickson-2017.html
+++ b/workshop-milton-erickson-2017.html
@@ -2,13 +2,13 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Milton Erickson Workshop 2017 | Hypnose-Helden Hamburg</title>
+    <title>Milton Erickson Workshop 2017 | Grundlagen vermitteln</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <meta name="description" content="Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg">
+    <meta name="description" content="Milton Erickson Workshop 2017: Grundlagen und Besonderheiten der Hypnose werden erfahrungsorientiert vermittelt.">
     <meta name="keywords" content="hypnose,mesmerismus,trance,hamburg,treffen,gruppe">
     <link rel="alternate" hreflang="de" href="http://hypnosehelden.de/" />
     <style>
