--- a/index.html
+++ b/index.html
@@ -31,14 +31,10 @@
         "@type": "Organization",
         "name": "HypnoseHelden",
         "url": "http://hypnosehelden.de/",
+        "logo": "http://hypnosehelden.de/assets/logo.png",
         "sameAs": [
             "https://www.facebook.com/groups/259833597717747/"
         ]
-    }, {
-        "@context": "http://schema.org",
-        "@type": "Organization",
-        "url": "http://hypnosehelden.de/",
-        "logo": "http://hypnosehelden.de/assets/logo.png"
     }, {
         "@context": "http://schema.org",
         "@type": "WebSite",
