--- a/workshop-milton-erickson-2017.html
+++ b/workshop-milton-erickson-2017.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <meta name="description" content="Milton Erickson Workshop 2017: Grundlagen und Besonderheiten der Hypnose werden erfahrungsorientiert vermittelt.">
-    <meta name="keywords" content="hypnose,mesmerismus,trance,hamburg,treffen,gruppe">
-    <link rel="alternate" hreflang="de" href="http://hypnosehelden.de/" />
+    <meta name="keywords" content="milton,erickson,workshop">
     <style>
         .facebook_container {
             text-align: right;
@@ -55,7 +54,7 @@
     <section class="page-header">
         <h1 class="project-name">HypnoseHelden</h1>
         <!-- h2 class="project-tagline">Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg</h2 -->
-        <h2 class="project-tagline">Hypnosegruppe Hamburg &bull; regelmäßig &bull; offen &bull; unkommerziell</h2>
+        <h2 class="project-tagline">Milton Erickson Workshop 2017: Grundlagen</h2>
     </section>
 
     <section class="main-content" style="position:relative;">
@@ -65,8 +64,8 @@
             <a href="https://www.facebook.com/groups/259833597717747/" target="_blank" title="Facebook"><img src="assets/FB-FindUsonFacebook-online-144.png" alt="Facebook" /></a>
         </div>
 
-        <h2>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Milton Erickson Workshop: Grundlagen</h2>
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Milton Erickson Workshop: Grundlagen</h3>
 
         <table>
             <tr>
