--- a/workshop-milton-erickson-2017.html
+++ b/workshop-milton-erickson-2017.html
@@ -147,7 +147,14 @@
     <script>
         document.body.innerHTML = document.body.innerHTML.replace(/HypnoseHelden/g, '<b>Hypnose<i style="color:#00bbbb;">Helden</i></b>');
     </script>
-
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-2442441-6', 'auto');
+    ga('send', 'pageview');
+    </script>
 
 </body>
 
