--- a/workshop-milton-erickson-2017.html
+++ b/workshop-milton-erickson-2017.html
@@ -128,7 +128,7 @@
         </ul>
 
         <p style="text-align:center;">
-            <a style="color:red;" href="https://tinyurl.com/erickson-hh-2017" target="_blank"><strong>Ja, ich will mich anmelden und klicke deshalb auf DIESEN Link!</strong></a>
+            <a style="color:red;text-decoration:underline;" href="https://tinyurl.com/erickson-hh-2017" target="_blank"><strong>Ja, ich will mich anmelden und klicke deshalb auf DIESEN Link!</strong></a>
         </p>
 
         <p>
