--- a/workshop-milton-erickson-2017.html
+++ b/workshop-milton-erickson-2017.html
@@ -138,7 +138,7 @@
 
 
         <footer class="site-footer" style="font-size:75%;">
-            <p><span class="site-footer-credits">HypnoseHelden ist eine private, nicht-kommerzielle Website.</span></p>
+            <p><span class="site-footer-credits">HypnoseHelden ist eine private, nicht-kommerzielle Website.</span> | <a class="site-footer-credits" href="datenschutz.html">Datenschutz</a></p>
         </footer>
 
 
