--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@ um therapeutisch arbeiten zu dürfen.
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Milton Erickson Workshop 2017: Grundlagen</h3>
-Hier geht es zu den Infos: <a href="workshop-milton-erickson-2017.html" >Milton Erickson Workshop 2017: Grundlagen</a>
+Hier geht es zu den Infos: <a href="workshop-milton-erickson-2017.html" >Milton Erickson Workshop 2017: Grundlagen</a>.
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hypnose-Roboter</h3>
+Aus Jux und Dollerei, der <a href="hypnose-roboter.html" >Hypnose-Roboter</a>.
+
+
 
 
         <h3>
