--- a/hypnose-roboter.html
+++ b/hypnose-roboter.html
@@ -38,7 +38,7 @@
     <section class="page-header">
         <h1 class="project-name">HypnoseHelden</h1>
         <!-- h2 class="project-tagline">Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg</h2 -->
-        <h2 class="project-tagline">Hypnose-Roboter: Automatisch erstellte Hypnose-Texte</h2>
+        <h2 class="project-tagline">Hypnose-Roboter: Automatisch erstellte Hypnose-Phrasen</h2>
     </section>
 
     <section class="main-content" style="position:relative;">
@@ -49,7 +49,7 @@
         </div>
 
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hypnotische Sprache maschinenbasiert erstellen</h3> Ein naiver Ansatz, der sich manchmal so anhört, als wenn Yoda zu einem sprechen würde. Der Text wird vorgelesen, wenn eine Internet-Verbindung besteht. Alles andere als ausgereift ;-)
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hypnotische Phrasen maschinenbasiert erstellen</h3> Ein naiver Ansatz, der sich manchmal so anhört, als wenn Yoda zu einem sprechen würde. Der Text wird vorgelesen, wenn eine Internet-Verbindung besteht. Alles andere als ausgereift ;-)
 
         <p/>
 
