--- a/hypnose-roboter.html
+++ b/hypnose-roboter.html
@@ -9,7 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <meta name="description" content="Hypnose-Roboter erstellt hypnotische Texte">
+    <meta name="description" content="Hypnose-Roboter erstellt hypnotische Phrasen">
     <meta name="keywords" content="">
     <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
     <script src="bundle.js"></script>
