De-AdBlock Facebook links

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
         <div class="facebook_container">
-            <a href="https://www.facebook.com/groups/259833597717747/" target="_blank" title="Facebook"><img src="assets/FB-FindUsonFacebook-online-144.png" alt="Facebook" /></a>
+            <a href="http://tinyurl.com/jbcqhhy" target="_blank" title="Facebook"><img src="assets/FB-FindUsonFacebook-online-144.png" alt="Facebook" /></a>
         </div>
 
         <h3>
