--- a/workshop-milton-erickson-2017.html
+++ b/workshop-milton-erickson-2017.html
@@ -54,7 +54,7 @@
     <section class="page-header">
         <h1 class="project-name">HypnoseHelden</h1>
         <!-- h2 class="project-tagline">Regelmäßige, nicht-kommerzielle, offene Hypnosegruppe in Hamburg</h2 -->
-        <h2 class="project-tagline">Milton Erickson Workshop 2017: Grundlagen</h2>
+        <h2 class="project-tagline">Milton Erickson Workshop 2017</h2>
     </section>
 
     <section class="main-content" style="position:relative;">
@@ -75,7 +75,7 @@
         <td>Tagungsraum in Hamburg</td>
     </tr><tr>
         <th>Wann:</th>
-        <td>Februar o. März | Wochenende (2 Tage) | täglich von 10-17 Uhr</td>
+        <td>11. - 12. März 2017 | täglich von 10-17 Uhr</td>
     </tr><tr>
         <th>Kosten:</th>
         <td>Etwa EUR 15 pro Person (bei 10 Teilnehmern)</td>
@@ -107,7 +107,7 @@
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Übungsmodule</h3>
 
 <p>
-    Die Übungsmodule bauen aufeinander auf. Es sind 8 Module geplant, je nach Geschwindigkeit können auch weitere Module eingeführt werden.</p><p>
+    Die Übungsmodule bauen aufeinander auf. Es sind 8 Module geplant, je nach Geschwindigkeit und Gruppengröße können auch weitere Module eingeführt werden.</p><p>
     Folgende Themen werden unter anderem behandelt: Einführung in die Hypnose von Erickson, Unbewusste Momente, Hypnotische Sprache, Weiche Sprache, Hypnotische Phänomene vorbereiten, Natürliche Trance-Phänomene, Fraktionierung nach Erickson, Hypnotische Stimme, Hypnotische Phänomene bewirken, Trance-Signale, Belebungs-Induktion und Belebungs-Trance-Phänomene, Schutz durch das Unterbewusstsein, das Unbewusste hinter Vorgängen erkennen und zur Hypnose verwenden.
 </p>
 
@@ -115,7 +115,7 @@
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hamburg | 2 Tage | Selbstkostenpreis</h3>
 
         <p>
-            Der Workshop wird an einem Wochenende in Hamburg zum Selbstkostenpreis stattfinden. Nach der Teilnehmerzahl richtet sich die Raumgröße, und damit die Raumkosten, welche alle Teilnehmer gemeinsam tragen werden. Eine typische Raummiete kann zwischen EUR 60 - 80 pro Tag liegen.</p>
+            Der Workshop findet zum Selbstkostenpreis statt. Nach der Teilnehmerzahl richtet sich die Raumgröße, und damit die Raumkosten, welche alle Teilnehmer gemeinsam tragen werden. Eine typische Raummiete kann zwischen EUR 60 - 80 pro Tag liegen.</p>
             <p>Kosten für Getränke, Speisen und ggf. Übernachtung sind selbst zu tragen.
         </p>
 
@@ -123,7 +123,7 @@
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Anmeldung</h3>
 
         <ul>
-            <li>Eine Anmeldung erfolgt online. Dort können von jedem mehrere passende Wochenenden ausgewählt werden. Der Workshop wird an einem Wochenende stattfinden: dem mit den meisten Eintragungen und einem freien Raum.</li>
+            <li>Eine Anmeldung erfolgt online.</li>
             <li>Es sind mindestens 4-6 Teilnehmer für die Übungen notwendig.</li>
         </ul>
 
