--- a/hypnose-roboter.html
+++ b/hypnose-roboter.html
@@ -56,7 +56,7 @@
         <!-- input onclick="responsiveVoice.speak('Du fühlst den wunderbaren Durchbruch, oder empfindest die Leichtigkeit, Du spürst den malerischen Zufall.', 'Deutsch Female');" type="button" value="Erstelle einen Text" / -->
         <input onclick="generateText();" type="button" value="Erstelle einen Text" />
 
-        <div id="hypnotext" style="padding:5px;height:120px;border:1px green solid"></div>
+        <div id="hypnotext" style="overflow:scroll;padding:5px;height:160px;border:1px green solid"></div>
 
 
         <footer class="site-footer" style="font-size:75%;">
