--- a/workshop-milton-erickson-2017.html
+++ b/workshop-milton-erickson-2017.html
@@ -72,7 +72,7 @@
                 <th>
                         Wo:
                 </th>
-        <td>Tagungsraum in Hamburg</td>
+        <td>Tagungsraum in Hamburg, Nähe Station "Berliner Tor"</td>
     </tr><tr>
         <th>Wann:</th>
         <td>11. - 12. März 2017 | täglich von 10-17 Uhr</td>
