--- a/workshop-milton-erickson-2017.html
+++ b/workshop-milton-erickson-2017.html
@@ -78,7 +78,7 @@
         <td>11. - 12. März 2017 | täglich von 10-17 Uhr</td>
     </tr><tr>
         <th>Kosten:</th>
-        <td>Etwa EUR 15 pro Person (bei 10 Teilnehmern)</td>
+        <td>EUR 20 pro Person</td>
         </tr><tr>
         <th>Teilnehmer:</th>
         <td>Mindestens 4-6 Teilnehmer</td>
