--- a/index.html
+++ b/index.html
@@ -91,9 +91,16 @@ um therapeutisch arbeiten zu dürfen.
 <p />
 <a href="Hypnose.und.Mesmerismus.10.2016.pdf" target="_blank">PDF: Hypnose und Mesmerismus</a>
 
+
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Milton Erickson Workshop 2017: Grundlagen</h3>
-Hier geht es zu den Infos: <a href="workshop-milton-erickson-2017.html" >Milton Erickson Workshop 2017: Grundlagen</a>.
+<p style="color:#cc0000;">Dieser Workshop wurde bereits durchgeführt!</p>
+<span style="text-decoration: line-through;">Hier geht es zu den Infos: <a href="workshop-milton-erickson-2017.html" >Milton Erickson Workshop 2017: Grundlagen</a></span>
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Gesprächshypnose Workshop 2017, Quartal 2: Grundlagen</h3>
+<span style="">Hier geht es zu den Infos: <a href="workshop-gespraechshypnose-q2-2017.html" >Gesprächshypnose Workshop 2017, Quartal 2: Grundlagen</a></span>
+
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hypnose-Roboter</h3>
@@ -102,7 +109,7 @@ Aus Jux und Dollerei, der <a href="hypnose-roboter.html" >Hypnose-Roboter</a>.
 
 
 
-        <h3>
+        <!-- h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Treffen und Kontakt</h3>
 
         <p style="border:1px  red solid;padding:5px;color:red">WICHTIG:</span> Die Treffen werden beginnen, wenn sich mindestens 2 weitere Interessenten gefunden haben. Schreibe uns eine Email. Wir informieren Dich, wenn es los geht.
@@ -114,7 +121,7 @@ Aus Jux und Dollerei, der <a href="hypnose-roboter.html" >Hypnose-Roboter</a>.
                 <li>zwischen [?] - [?] Uhr,</li>
                 <li>an einem von der Teilnehmerzahl abhängigen Ort.</li>
             </ul>
-        </p>
+        </p -->
 
         <p>Wir freuen uns auf Dich! Bitte schreibe eine Email an <a style="text-decoration:underline;" href="mailto:info@hypnosehelden.de">info@hypnosehelden.de</a>.</p>
 
