ADD: Grundlagen der Hypnose

--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@ um therapeutisch arbeiten zu dürfen.
 <p />
 <a href="Hypnose.und.Mesmerismus.10.2016.pdf" target="_blank">PDF: Hypnose und Mesmerismus</a>
 
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Grundlagen der Hypnose</h3>
+<p>
+    Hypnose-Seminare und -Workshops behandeln immer wieder eine Reihe von Grundlagen, bevor zum eignentlichen Thema übergegangen wird.
+    Als Erinnerung für erfahrene Teilnehmer werden auf der folgenden Seite diese Grundlagen zusammengefasst.
+</p>
+
+Diese Seite wird laufend weiter bearbeitet: <a href="hypnose-workshop-grundlagen.html" >Grundlagen der Hypnose</a>.
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Milton Erickson Workshop 2017: Grundlagen</h3>
