--- a/hypnose-workshop-grundlagen.html
+++ b/hypnose-workshop-grundlagen.html
@@ -265,7 +265,9 @@
                 </dd>
             </dl>
 
-
+            <footer class="site-footer" style="font-size:75%;">
+                <p><span class="site-footer-credits">HypnoseHelden ist eine private, nicht-kommerzielle Website.</span> | <a class="site-footer-credits" href="datenschutz.html">Datenschutz</a></p>
+            </footer>
 
     </section>
 
